# gpio_morse_code_led

./: LICENSE  README.md  led_12.py  morse_translator.py  pyproject.toml
src/gpio_morse_code_led/: __main__.py  morse_translator.py
